--- a/pom.xml
+++ b/pom.xml
@@ -41,16 +41,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.0-rc3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2</artifactId>
-            <version>2.0.13</version>
         </dependency>
 
         <dependency>
@@ -59,7 +59,6 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 
